// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compositions Login calls the onLogin callback with the entered data. 1`] = `
<styled.div>
  <styled.div>
    <Flex>
      <Styled(Box)
        width={0.4166666666666667}
      >
        <img
          src=""
        />
        <styled.h2
          color="#fff"
        >
          Web images done right.
        </styled.h2>
        <styled.p>
          Powered by Liip.
        </styled.p>
      </Styled(Box)>
      <Box
        p={
          Array [
            "2rem",
            "1rem",
          ]
        }
        pl={
          Array [
            "0.5rem",
            "1rem",
          ]
        }
        width={0.5833333333333334}
      >
        <form
          onSubmit={[Function]}
        >
          <Component
            label="Organization"
          >
            <styled.input
              name="organization"
              onChange={[Function]}
              type="text"
              value="an-organization"
            />
          </Component>
          <Component
            label="API Key"
          >
            <styled.input
              name="apiKey"
              onChange={[Function]}
              type="password"
              value="a password"
            />
          </Component>
          <Component
            type="submit"
          >
            Login
          </Component>
        </form>
      </Box>
    </Flex>
  </styled.div>
</styled.div>
`;

exports[`Compositions Login renders the login form correctly. 1`] = `
<styled.div>
  <styled.div>
    <Flex>
      <Styled(Box)
        width={0.4166666666666667}
      >
        <img
          src=""
        />
        <styled.h2
          color="#fff"
        >
          Web images done right.
        </styled.h2>
        <styled.p>
          Powered by Liip.
        </styled.p>
      </Styled(Box)>
      <Box
        p={
          Array [
            "2rem",
            "1rem",
          ]
        }
        pl={
          Array [
            "0.5rem",
            "1rem",
          ]
        }
        width={0.5833333333333334}
      >
        <form
          onSubmit={[Function]}
        >
          <Component
            label="Organization"
          >
            <styled.input
              name="organization"
              onChange={[Function]}
              type="text"
              value=""
            />
          </Component>
          <Component
            label="API Key"
          >
            <styled.input
              name="apiKey"
              onChange={[Function]}
              type="password"
              value=""
            />
          </Component>
          <Component
            type="submit"
          >
            Login
          </Component>
        </form>
      </Box>
    </Flex>
  </styled.div>
</styled.div>
`;
